adding updating and cancel subscription

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,11 @@
     background: #b4c6d0;
 }
 
+.texture {
+    background-color: #ffffff;
+    background-image: url("https://www.transparenttextures.com/patterns/connected.png");
+}
+
 body {
     margin: 0;
     padding: 0;
